# cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile  mylibConfig.cmake.in
cmake/: functions.cmake  mylibConfig.cmake.in
source/: CMakeLists.txt
source/mylib/: CMakeLists.txt  mylib.h
source/nodeflow/: node.h  operator.h
test/: CMakeLists.txt  test_main.cpp
